# yt2mp3

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.in  requirements-dev.txt  requirements-gpu.txt  requirements-research.txt  requirements.in  requirements.txt  start_backend.sh  yt2mp3-spec.md
app/: __init__.py  config.py  errors.py  main.py  models.py
app/api/: auth.py  jobs.py
app/models/: __init__.py  api.py  job.py  melody.py  music.py  rhythm.py  stem.py  vocal_pitch.py
app/services/: artifacts.py  audio.py  files.py  gpu_subprocess_env.py  job_manager.py  key_analyzer.py  key_names.py  melody.py  melody_lead_selection.py  process.py  stem_separator.py  task_queue.py  youtube.py
app/static/: app.js  styles.css
app/templates/: index.html  login.html
deploy/: yt2mp3-backend.service
docs/: gpu.md  index.md  melody_fusion.md  yt2mp3-spec.md
docs/archive/: melody-v4.2.md  rhythm-phase-2.2.3.md  yt2mp3-spec-v1.1.md
frontend/: app.js  auth.js  config.js  index.html  login.html  styles.css
scripts/: build_frontend.sh  build_jianpu_draft.py  check_codex.sh  compare_notes_draft.py  export_melody_excel.py  export_rhythm_debug.py  postprocess_melody_debug.py  run_fcpe_pitch_csv.py  run_melody_fusion_debug.py  run_pesto_pitch_csv.py  run_rmvpe_pitch.py  run_step1_tests.py  run_step2_tests.py  run_torchcrepe_pitch_csv.py  smoke_demucs.py  smoke_fcpe.py  smoke_pesto.py  smoke_rmvpe.py  smoke_test.sh  smoke_torchcrepe.py
tests/unit/: test_api.py  (+31 more)
(+30 files in other folders)
