[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "yt2mp3"
version = "0.1.0"
description = "Private YouTube audio key analysis and pitch shifting web app"
requires-python = ">=3.12,<3.13"
license = { text = "GPL-3.0-or-later" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
